# carball

./: .automerge.yml  .coveragerc  .gitignore  .travis.yml  89 Batmobile.csv  Aftershock.csv  AirDodgeShot.csv  Airdribble.csv  Airdribble2.csv  Airdribble3.csv  Animus GP.csv  Backfire.csv  Batmobile.csv  Bone Shaker.csv  Breakout Type-S.csv  Breakout.csv  BuggyBounce1.csv  BuggyBounce2.csv  Centio V17.csv  Cyclone.csv  DeLorean Time Machine.PY  Dodge Charger.csv  DodgeDiagonal.csv  DodgeDiagonalRoll.csv  DodgeForward.csv  DodgeForwardWithYaw.csv  Dominus.csv  DoubleJump.csv  Dribble.csv  Dribble2.csv  Dribble3.csv  Endo.csv  Esper.csv  Fall.csv  FallMaxSpeed.csv  FallSpin.csv  FlipCancel.csv  FlipCancelBarelyDiagonal.csv  FlipCancelDiagonal.csv  FlipReset.csv  (+75 more)
.github/: FUNDING.yml
.travis/: install-protoc.sh  update_version.sh
_travis/: install-protoc-runtime.sh  install-protoc.sh  update_version.sh
analyser/: game_analyser.py  hit.py  readme.md
api/: game.proto  party.proto  player.proto  player_id.proto  team.proto
benchmarking/: benchmarking.py
carball/: __init__.py  command_line.py  decompile_replays.py  game.json
controls/: controls.py  rotations.py
cpp/: CMakeLists.txt  README.md
cpp/resources/fonts/carlenlund_helmet/: LICENSE
cpp/src/: CMakeLists.txt  csv.cpp  csv.h  graphics.cpp  graphics.h  main.cpp  main.h
cpp/src/Frontend/GFXUtilities/: CMakeLists.txt  point2.cpp  point2.h
cpp/src/Frontend/GUI/: CMakeLists.txt  RUComponent.cpp  RUComponent.h  RUImageComponent.cpp  RUImageComponent.h
cpp/src/Frontend/GUI/RUGraph/: CMakeLists.txt  Circle.cpp  Circle.h  GraphLine.cpp  GraphLine.h  GraphScatter.cpp  GraphScatter.h  Graphable.cpp  Graphable.h  RUGraph.cpp  RUGraph.h
cpp/src/Frontend/GUI/Text/: CMakeLists.txt  RUButton.cpp  RUButton.h  RULabel.cpp  RULabel.h  RUTextComponent.cpp  RUTextComponent.h  RUTextbox.cpp  RUTextbox.h
eleague_analysis/: analyser.py  main.py
game/: actor_parsing.py  boost.py  game.py  goal.py  player.py  team.py
json_parser/: actor_parsing.py  game.py
output/: 015827654AB94CC4973A30897DACCAB3game.json  1FFBD4C44A7C6E87C8E8F5834C0B2C2Agame.json  (+11 more)
(+371 files in other folders)
